--- a/package.json
+++ b/package.json
@@ -10,21 +10,20 @@
     "browser-sync": "^2.13.0",
     "csscomb": "^3.1.7",
     "csso": "^2.2.1",
+    "eslint": "^3.5.0",
     "htmlhint": "^0.9.13",
-    "jshint": "^2.9.3",
     "node-sass": "^3.8.0",
     "npm-run-all": "1.3.2",
-    "pleeease": "^4.1.0",
     "postcss": "^5.2.0",
     "watch": "^0.19.2"
   },
   "scripts": {
     "serve": "browser-sync start --server ./",
     "css:min": "csso ./test/common/css/style.css ./test/common/css/style.min.css",
-    "css:sass": "node-sass --include-path scss ./test/common/_scss/**.scss ./test/common/css/**.css",
+    "css:sass": "node-sass --include-path scss ./test/common/_scss/test.scss ./test/common/css/test.css",
     "css:comb": "csscomb ./test/common/css/**.css",
-    "css:prefix": "postcss --use autoprefixer --autoprefixer.browsers 'ios >= 8, android >= 4.1, last 2 versions' ./test/common/css/**.css -d ./dest/common/css/",
-    "js:lint": "jshint ./test/common/js/**.js",
+    "css:prefix": "postcss --use autoprefixer --autoprefixer.browsers 'ios >= 8, android >= 4.1, last 2 versions' ./test/common/css/**.css -d ./test/common/css/",
+    "js:lint": "eslint ./test/common/js/**.js",
     "html:lint": "htmlhint ./test/**.html",
     "watch:css": "watch 'npm run css:sass && npm run css:comb && npm run css:prefix' ./test/common/_scss/",
     "watch:js": "watch 'npm run js:lint' ./test/common/js/",
